--- a/index.html
+++ b/index.html
@@ -124,18 +124,14 @@
                     <div class="left-side-f">
                         <div class="header-section">
                             <div class="header-text">
-                                Lorem Ipsum
+                                Emir Yücel
                             </div>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, dignissimos magni repellat, suscipit molestias
-                            nobis nisi eaque corrupti laborum maxime reprehenderit quos dolore recusandae vitae numquam hic sed adipisci
-                            similique.
+                            Emirrrrrrrrrr
                         </p>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, dignissimos magni repellat, suscipit molestias
-                            nobis nisi eaque corrupti laborum maxime reprehenderit quos dolore recusandae vitae numquam hic sed adipisci
-                            similique.
+                            EEEEEEEMMMMİİİİİRRRRRRR
                         </p>
                     </div>
                     <div class="img-content-left-side">
