--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emir Yücel | Anasayfa</title>
+    <title>mir Yücel | Anasayfa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
