--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mir Yücel | Anasayfa</title>
+    <title>Emir Yücel | Anasayfa</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -124,14 +124,14 @@
                     <div class="left-side-f">
                         <div class="header-section">
                             <div class="header-text">
-                                Emir Yücel
+                                Emir&Hacer
                             </div>
                         </div>
                         <p>
-                            Emirrrrrrrrrr
+                            Emir Yücel & Hacer Naz
                         </p>
                         <p>
-                            EEEEEEEMMMMİİİİİRRRRRRR
+                            Anılarımıza hoşgeldin. Burada birlikte geçirdiğimiz sürede biriktirdiğimiz zamanları yeniden göreceksin. Hepsi birbirinden değerli, hayatımın bütünü.
                         </p>
                     </div>
                     <div class="img-content-left-side">
