git push origin main

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                     <div class="img-content-left-side">
-                        <img src="https://picsum.photos/1000" alt="">
+                        <img src="img/foto 1.jpg" alt="">
                     </div>
                 </div>
             </div>
