--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="effect-overflow">
                         <div class="swiper mySwiper">
                             <div class="swiper-slide">
-                                <iframe width="100%" height="500" src="https://youtube.com/shorts/gGQS3KDQi7Y?feature=share"
+                                <iframe width="100%" height="500" src="https://youtube.com/shorts/gGQS3KDQi7Y?si=D5dr4NBUMs8tba3O"
                                     frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
