--- a/index.html
+++ b/index.html
@@ -161,10 +161,13 @@
                             </div>
                       
                             <div class="swiper-slide">
-                                <iframe width="100%" height="500" src="https://youtube.com/shorts/IoZKM0RSbS4?feature=share"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="315" height="560" 
+                                src="https://youtube.com/shorts/vFoSDWj6DEY?feature=share" 
+                                title="YouTube video player" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+                                gyroscope; picture-in-picture;
+                                web-share"
+                                allowfullscreen></iframe>
                             </div>
                       
                             <div class="swiper-slide">
