--- a/videolar.html
+++ b/videolar.html
@@ -135,7 +135,13 @@
                         <div class="card">
                             <div class="card-p">
                                 <div class="card-h">
-                                    <iframe width="100%" height="100%" src="https://youtube.com/shorts/gGQS3KDQi7Y?si=PeAJgFKMfWhQIjH8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                    <iframe width="315" height="560" 
+                                    src="https://youtube.com/shorts/gGQS3KDQi7Y?si=PeAJgFKMfWhQIjH8" 
+                                    title="YouTube video player" frameborder="0" 
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+                                    gyroscope; picture-in-picture;
+                                    web-share"
+                                    allowfullscreen></iframe>                                    
                                 </div>
                             </div>
                         </div>
