--- a/index.html
+++ b/index.html
@@ -154,14 +154,17 @@
                     <div class="effect-overflow">
                         <div class="swiper mySwiper">
                             <div class="swiper-slide">
-                                <iframe width="100%" height="500" src="https://youtube.com/shorts/gGQS3KDQi7Y?si=D5dr4NBUMs8tba3O"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="100%" height="500" 
+                                src="https://youtube.com/shorts/vFoSDWj6DEY?feature=share" 
+                                title="YouTube video player" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+                                gyroscope; picture-in-picture;
+                                web-share"
+                                allowfullscreen></iframe>
                             </div>
                       
                             <div class="swiper-slide">
-                                <iframe width="315" height="560" 
+                                <iframe width="100%" height="500" 
                                 src="https://youtube.com/shorts/vFoSDWj6DEY?feature=share" 
                                 title="YouTube video player" frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media;
