--- a/videolar.html
+++ b/videolar.html
@@ -135,13 +135,7 @@
                         <div class="card">
                             <div class="card-p">
                                 <div class="card-h">
-                                    <iframe width="315" height="560" 
-                                    src="https://youtube.com/shorts/gGQS3KDQi7Y?si=PeAJgFKMfWhQIjH8" 
-                                    title="YouTube video player" frameborder="0" 
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-                                    gyroscope; picture-in-picture;
-                                    web-share"
-                                    allowfullscreen></iframe>                                    
+                                    <iframe width="407" height="724" src="https://www.youtube.com/embed/gGQS3KDQi7Y" title="video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                                
                                 </div>
                             </div>
                         </div>
