--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="nav-container">
             <div class="nav-title">
                 <a href="index.html" class="profile-img">
-                    <img src="img/logo.png"
+                    <img src="img/emir.png"
                         alt="profile">
                 </a>
                 
@@ -95,11 +95,11 @@
                             </div>
                         </a>
                         <div class="flex-direction">
-                            <a href="#mail-adresi" target="_blank">
+                            <a href="emiryucel34@gmail.com" target="_blank">
                                 <div class="link-numbers">05</div><span class="slash"></span><img width="42" height="42"
                                     src="https://img.icons8.com/fluency/48/apple-mail.png" alt="apple-mail" />
                             </a>
-                            <a href="#instagram-adresi" target="_blank">
+                            <a href="https://www.istagram.com/emrycl32" target="_blank">
                                 <div class="link-numbers">05</div><span class="slash"></span><img width="42" height="42"
                                     src="https://img.icons8.com/fluency/48/instagram-new.png" alt="apple-mail" />
                             </a>
@@ -147,9 +147,7 @@
                         </div>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum tenetur libero quidem. Architecto eius laborum,
-                        blanditiis laudantium dolores cupiditate asperiores corrupti fugit inventore iure, debitis autem tempore amet, quas
-                        recusandae!
+                        Videolarımızın bir kısmı burada yer alıyor.
                     </p>
                     <div class="effect-overflow">
                         <div class="swiper mySwiper">
@@ -246,7 +244,7 @@
                         </div>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi beatae autem voluptas architecto repellendus doloremque expedita ratione numquam animi voluptatum, mollitia libero sit harum accusamus laudantium. Voluptas ullam explicabo reiciendis?
+                        Anılarımız, hatıralarımız.
                     </p>
                     <div class="effect-overflow">
                         <div class="swiper mySwiper2">
