--- a/fotograflar.html
+++ b/fotograflar.html
@@ -94,11 +94,11 @@
                             </div>
                         </a>
                         <div class="flex-direction">
-                            <a href="#mail-adresi" target="_blank">
+                            <a href="emiryucel34@gmail.com" target="_blank">
                                 <div class="link-numbers">05</div><span class="slash"></span><img width="42" height="42"
                                     src="https://img.icons8.com/fluency/48/apple-mail.png" alt="apple-mail" />
                             </a>
-                            <a href="#instagram-adresi" target="_blank">
+                            <a href="https://www.instagram.com/emrycl32" target="_blank">
                                 <div class="link-numbers">05</div><span class="slash"></span><img width="42" height="42"
                                     src="https://img.icons8.com/fluency/48/instagram-new.png" alt="apple-mail" />
                             </a>
@@ -126,9 +126,7 @@
                         </div>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum tenetur libero quidem. Architecto eius laborum,
-                        blanditiis laudantium dolores cupiditate asperiores corrupti fugit inventore iure, debitis autem tempore amet, quas
-                        recusandae!
+                        Anılarımız, hatıralarımız.
                     </p>
                     <div class="frame-container">
 
