--- a/videolar.html
+++ b/videolar.html
@@ -126,9 +126,7 @@
                         </div>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum tenetur libero quidem. Architecto eius laborum,
-                        blanditiis laudantium dolores cupiditate asperiores corrupti fugit inventore iure, debitis autem tempore amet, quas
-                        recusandae!
+                        Henüz sadece komikli videolar var. Erzurum'da evde kilitli kalmamdan, alinin uykuya dalmasına :D.
                     </p>
                     <div class="frame-container">
   
