--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <div class="link-numbers">05</div><span class="slash"></span><img width="42" height="42"
                                     src="https://img.icons8.com/fluency/48/apple-mail.png" alt="apple-mail" />
                             </a>
-                            <a href="https://www.istagram.com/emrycl32" target="_blank">
+                            <a href="https://www.instagram.com/emrycl32" target="_blank">
                                 <div class="link-numbers">05</div><span class="slash"></span><img width="42" height="42"
                                     src="https://img.icons8.com/fluency/48/instagram-new.png" alt="apple-mail" />
                             </a>
