--- a/videolar.html
+++ b/videolar.html
@@ -133,7 +133,7 @@
                         <div class="card">
                             <div class="card-p">
                                 <div class="card-h">
-                                    <iframe width="407" height="724" src="https://www.youtube.com/embed/gGQS3KDQi7Y" title="video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                                
+                                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/gGQS3KDQi7Y" title="video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                                
                                 </div>
                             </div>
                         </div>
