--- a/fotograflar.html
+++ b/fotograflar.html
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <p>
-                        Anılarımız, hatıralarımız.
+                        Anılarımız, hatıralarımız. Umarım bu websitenin daha geç açılmasını sağlayacak bir bu kadar daha anımız olur seninle. Seni çok seviyorum.
                     </p>
                     <div class="frame-container">
 
