--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                     <div class="img-content-left-side">
-                        <img src="img/foto 5.jpg" alt="">
+                        <img src="https://hikayemsin.com/img/foto%20103.jpeg" alt="">
                     </div>
                 </div>
             </div>
