--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="nav-links nav-link-settings">
                     <div class="nav-menu-header">
                         <a href="index.html" class="profile-img">
-                            <img src="img/logo.png"
+                            <img src="img/emir.png"
                                 alt="profile">
                         </a>
                        
