--- a/aylik-yazilar.html
+++ b/aylik-yazilar.html
@@ -39,7 +39,7 @@
         <div class="nav-container">
             <div class="nav-title">
                 <a href="index.html" class="profile-img">
-                    <img src="img/logo.png"
+                    <img src="img/emir.png"
                         alt="profile">
                 </a>
                 
@@ -49,7 +49,7 @@
                 <div class="nav-links nav-link-settings">
                     <div class="nav-menu-header">
                         <a href="index.html" class="profile-img">
-                            <img src="img/logo.png"
+                            <img src="img/emir.png"
                                 alt="profile">
                         </a>
                        
