--- a/aylik-yazilar.html
+++ b/aylik-yazilar.html
@@ -127,7 +127,13 @@
                         </div>
                     </div>
                     <p>
-                        Girmesene kardeşim güncellenecek diyoruz Allah Allah çık git
+                        Ekim ayı, rüzgarın yapraklarla dans ettiği, doğanın sessizce değiştiği bir ay... Ama bazen, tıpkı sonbahar fırtınaları gibi, biz de içimizde bir fırtına yaşadık bu ay. Söylediğimiz kelimeler, belki biraz sert, belki biraz yaralayıcıydı. Ama her rüzgarın ardından gelen bir sakinlik gibi, ben yine de sana olan sevgimi yüreğimde hep aynı yerde taşıyorum.
+
+Tartışmalarımızın ortasında bile, gözlerine her baktığımda, bizi bir arada tutan o bağı yeniden hissediyorum. Bazen sözler yetersiz kalıyor, bazen de fazlasıyla ağır geliyor. Ama tüm bunların içinde bildiğim bir şey var: Seninle her zorluğu aşarım. Çünkü bizim sevgimiz, sonbahar rüzgarlarının savurduğu yapraklar gibi geçici değil. Her bir tartışma, her bir zorluk, bizi daha güçlü yapıyor.
+
+Bu Ekim, belki de birbirimizi yeniden keşfetmemiz için bir fırsat sundu. Sessizliklerimizin arasında bile sevgimizi hissediyorum. Her tartışma, aslında birbirimizi ne kadar önemsediğimizin, sevdiğimizin bir işareti değil mi? Çünkü biz, o fırtınanın ortasında bile, birbirimizi bırakmadık.
+
+Sevgi, bazen en sert rüzgarların bile getiremeyeceği kadar derin bir sığınak. Ve bu Ekim, belki de bizi o sığınağa daha çok yaklaştırdı. Ne olursa olsun, biliyorum ki her rüzgar durulacak ve yine el ele, birbirimizin yanında olacağız.
                     </p>
                     
                     <div class="default">
