--- a/aylik-yazilar.html
+++ b/aylik-yazilar.html
@@ -131,7 +131,7 @@
                     </p>
                     
                     <div class="default"> 
-                        <p style="background-color: #898989; border-radius: 20%; text-align: center">Ekim 2024</p>
+                        <p style="background-color: #898989; border-radius: 30px; text-align: center">Ekim 2024</p>
                         <p>
                             Ekim ayı, rüzgarın yapraklarla dans ettiği, doğanın sessizce değiştiği bir ay... Ama bazen, tıpkı sonbahar fırtınaları gibi, biz de içimizde bir fırtına yaşadık bu ay. Söylediğimiz kelimeler, belki biraz sert, belki biraz yaralayıcıydı. Ama her rüzgarın ardından gelen bir sakinlik gibi, ben yine de sana olan sevgimi yüreğimde hep aynı yerde taşıyorum.
 
