--- a/aylik-yazilar.html
+++ b/aylik-yazilar.html
@@ -144,8 +144,9 @@
                         
                     </div>
                     <div class="default">
+                        <p style="background-color: white; border-radius: 70px; text-align: center">Ekim 2024</p>
                         <p>
-                            -
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, error placeat illo consectetur cum sint fugiat tempora. Expedita, hic doloribus praesentium nemo quae sint odit magni veritatis esse, nisi consequatur vero consectetur. Optio sapiente deserunt impedit nemo neque voluptates quis, quos dignissimos natus est nulla necessitatibus praesentium dolor, atque error.
                         </p>
                         
                     </div>
