--- a/index.html
+++ b/index.html
@@ -316,7 +316,10 @@ Sevgi, bazen en sert rüzgarların bile getiremeyeceği kadar derin bir sığın
                     </div>
                     <div class="default">
                         <p>
-                            -
+                            Kasım… Sararan yapraklar gibi üzerimizdeki yükleri bir bir bırakıp yeni bir başlangıca adım attığımız ay. Bu ay, hem içimizi ısıtan hem de bizi sınayan duygularla doluydu.
+                            Bugün, Erzurum’a doğru yola çıktın. Şimdi bir ay boyunca, her gün biraz daha özlemle seni bekleyeceğim. Ama biliyorum ki bu bekleyiş, sevgimizi daha da güçlendirecek. Kasım, aramızdaki tüm engelleri aşıp birbirimizi daha derinden anladığımız, sevgimize yeniden sıkıca sarıldığımız bir ay oldu.
+                            Sensiz geçen her gün, sana olan sevgimi büyütecek. Sesini duymak bile yetiyor bazen, ama seni yeniden görebilmek... İşte o an için sabırsızlanıyorum. Seninle geçen her mevsim güzel, ama Kasım… Kasım, bizim hikayemizde artık çok özel bir yer edindi.
+
                         </p>
                         
                     </div>
