--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
                     </p>
                     
                     <div class="default">
+                        <p style="background-color: rgb(190, 190, 190); border-radius: 70px; text-align: center">Ekim 2024</p>
                         <p>
                             Ekim ayı, rüzgarın yapraklarla dans ettiği, doğanın sessizce değiştiği bir ay... Ama bazen, tıpkı sonbahar fırtınaları gibi, biz de içimizde bir fırtına yaşadık bu ay. Söylediğimiz kelimeler, belki biraz sert, belki biraz yaralayıcıydı. Ama her rüzgarın ardından gelen bir sakinlik gibi, ben yine de sana olan sevgimi yüreğimde hep aynı yerde taşıyorum.
 Tartışmalarımızın ortasında bile, gözlerine her baktığımda, bizi bir arada tutan o bağı yeniden hissediyorum. Bazen sözler yetersiz kalıyor, bazen de fazlasıyla ağır geliyor. Ama tüm bunların içinde bildiğim bir şey var: Seninle her zorluğu aşarım. Çünkü bizim sevgimiz, sonbahar rüzgarlarının savurduğu yapraklar gibi geçici değil. Her bir tartışma, her bir zorluk, bizi daha güçlü yapıyor.
@@ -315,8 +316,9 @@ Sevgi, bazen en sert rüzgarların bile getiremeyeceği kadar derin bir sığın
                         
                     </div>
                     <div class="default">
+                        <p style="background-color: rgb(190, 190, 190); border-radius: 70px; text-align: center">Kasım 2024</p>
                         <p>
-                            Kasım… Sararan yapraklar gibi üzerimizdeki yükleri bir bir bırakıp yeni bir başlangıca adım attığımız ay. Bu ay, hem içimizi ısıtan hem de bizi sınayan duygularla doluydu.
+                            Sararan yapraklar gibi üzerimizdeki yükleri bir bir bırakıp yeni bir başlangıca adım attığımız ay. Bu ay, hem içimizi ısıtan hem de bizi sınayan duygularla doluydu.
                             Bugün, Erzurum’a doğru yola çıktın. Şimdi bir ay boyunca, her gün biraz daha özlemle seni bekleyeceğim. Ama biliyorum ki bu bekleyiş, sevgimizi daha da güçlendirecek. Kasım, aramızdaki tüm engelleri aşıp birbirimizi daha derinden anladığımız, sevgimize yeniden sıkıca sarıldığımız bir ay oldu.
                             Sensiz geçen her gün, sana olan sevgimi büyütecek. Sesini duymak bile yetiyor bazen, ama seni yeniden görebilmek... İşte o an için sabırsızlanıyorum. Seninle geçen her mevsim güzel, ama Kasım… Kasım, bizim hikayemizde artık çok özel bir yer edindi.
 
