--- a/index.html
+++ b/index.html
@@ -326,8 +326,12 @@ Sevgi, bazen en sert rüzgarların bile getiremeyeceği kadar derin bir sığın
                         
                     </div>
                     <div class="default">
+                        <p style="background-color: rgb(190, 190, 190); border-radius: 70px; text-align: center">Aralık 2024</p>
                         <p>
-                            -
+                            Aralık… Yılın en sessiz ama en derin ayı. Kar taneleri gibi naif ve bir o kadar da büyüleyici. Her şey soğuyup durağanlaşırken, içimde senin sevginin sıcaklığını daha çok hissediyorum.
+Bu ay, takvim yapraklarının sonuna gelirken, seninle geçirdiğimiz anların kıymetini daha da iyi anlıyorum. Yanımda olman, her soğuk günü sıcacık bir hatıraya dönüştürüyor.
+Beraber hayalini kurduğumuz anlar artık gerçek olmaya daha yakın. Soğuk bir günde el ele yürümek, sıcacık kahvelerimizi paylaşmak ve yeni bir yıla beraber adım atmak... Yılın son günlerinde, seninle geçirdiğim her saniyeyi kalbimde biriktiriyorum. Çünkü biliyorum, seninle her şey daha anlamlı, daha güzel.
+
                         </p>
                         
                     </div>
