--- a/fotograflar.html
+++ b/fotograflar.html
@@ -2453,5 +2453,12 @@
         
     });
 </script>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    document.querySelectorAll('img').forEach(img => {
+      img.setAttribute('loading', 'lazy');
+    });
+  });
+</script>
 </body>
 </html>
